Add latest polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,38 +1,41 @@
-
 [global/wm]
-margin-top    = 0
 margin-bottom = 0
-include-file = $HOME/.config/polybar/colors.ini
-include-file = $HOME/.config/polybar/modules.ini
+margin-top = 0
+include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/modules.ini
+include-file = ~/.config/polybar/user_modules.ini
+
 
 [bar/main]
 bottom = true
+
+modules-left = i3 separator tray xkeyboard spacechar
+modules-center = date
+modules-right = network separator battery0 spacechar battery1 separator pulseaudio separator backlight
 width = 100%
-height = 24
-radius = 0
-fixed-center = true
-monitor = ${env:MONITOR:}
-monitor-strict = true
-background = ${colors.bg}
-foreground = ${colors.fg}
+height = 35
 
-border-size  = 1
-border-color = ${colors.black}
+background = ${color.bg}
 
-padding       = 2
-module-margin = 1
+
+padding = 1
+
+module-margin-left = 0
+module-margin-right = 0
 
 font-0 = EnvyCodeR Nerd Font:style=Medium:size=11;2
+font-1 = EnvyCodeR Nerd Font:style=Medium:size=11;2
+font-2 = EnvyCodeR Nerd Font:style=Medium:size=11;2
+font-3 = EnvyCodeR Nerd Font:style=Medium:size=11;2
+font-4 = EnvyCodeR Nerd Font:style=Medium:size=11;2
 
-modules-left    = menu i3
-modules-center  = time
-modules-right   = pulseaudio network battery0 battery1 backlight tray
-
+monitor = ${env:MONITOR:}
+monitor-strict = true
 wm-restack = i3
-
+fixed-center = true
 cursor-click  = pointer
 
+
 [settings]
+
 screenchange-reload = true
-
-
