--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,12 +1,4 @@
-
-[colors]
- bg =  #1e2326
- fg =  #D4D9AF
- white =#7FBBB3
- black =#000000
- blue = #78b59b
- red = #E67E80
- green = #A7C080
- yellow = #DBBC7F
- cyan = #89dceb
- magenta = #eba0ac
+[color]
+bg = #000000
+purple = #ffffff
+red =  #C90E14
