--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,207 +1,142 @@
-
-[module/menu]
-type    = custom/text
-
-content            = 󰣇
-content-foreground = #fa84c3
-content-padding    = 1
-
-click-left         = rofi -show drun
-click-right        = rofi -show window
-
+; ===== Left =====
 [module/i3]
 type = internal/i3
-pin-workspaces = true
-enable-click = true
-enable-scroll = true
-format-padding = 1
-show-all = true;
-ws-num = 10;
-ws-icon-0 = 1;1
-ws-icon-1 = 2;2
-ws-icon-2 = 3;3
-ws-icon-3 = 4;4
-ws-icon-4 = 5;5
-ws-icon-5 = 6;6
-ws-icon-6 = 7;7
-ws-icon-7 = 8;8
-ws-icon-8 = 9;9
-ws-icon-9 = 10;10
-
-ws-icon-default =
-
+;
+;index-sort = true
+;enable-scroll = false
+;wrapping-scroll = false
+;reverse-scroll = false
+;
 format = <label-state>
-format-background = ${colors.bg}
-
-label-focused = %icon%
+;
+label-focused-font = 5
+label-focused = 
+label-focused-foreground = ${color.purple}
 label-focused-padding = 1
-label-focused-foreground = ${colors.red}
-
-label-unfocused = %icon%
+;
+label-unfocused-font = 4
+label-unfocused = 
+label-unfocused-foreground = ${color.purple}
 label-unfocused-padding = 1
-label-unfocused-foreground = ${colors.fg}
-
-label-visible = %icon%
+;
+label-visible-font = 4
+label-visible = 
+label-visible-foreground = ${color.purple}
 label-visible-padding = 1
-label-visible-foreground = ${colors.red}
-
-label-urgent = %icon%
+;
+label-urgent-font = 4
+label-urgent = 
+label-urgent-foreground = ${color.purple}
 label-urgent-padding = 1
-label-urgent-foreground = ${colors.red}
+
+
+[module/temperature]
+type = internal/temperature
+
+units = true
+format = <ramp> <label>
+format-padding = 1
+
+base-temperature = 35
+warn-temperature = 60
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+
+ramp-foreground = ${color.purple}
+
+label = %temperature-c%
+label-foreground = ${color.purple}
+
+format-warn =  <label-warn>
+format-warn-padding = 1
+format-warn-foreground = ${color.purple}
+
+
+[module/cpu]
+type = internal/cpu
+
+interval = 0.5
+format = <ramp-load> <label>
+format-padding = 1
+
+ramp-load-0 = 
+ramp-load-1 = 
+ramp-load-2 = 
+ramp-load-3 = 
+ramp-load-4 = 
+
+ramp-load-foreground = ${color.purple}
+
+label = %percentage%%
+label-foreground = ${color.purple}
+
+[module/memory]
+type = internal/memory
+interval = 1
+format =  <ramp-used> <label>
+format-padding = 1
+
+ramp-used-0 = 
+ramp-used-1 = 
+ramp-used-2 = 
+ramp-used-3 = 
+ramp-used-4 = 
+
+ramp-used-foreground = ${color.purple}
+
+label = %gb_used%/%gb_total%
+label-foreground = ${color.purple}
+
+
+; ===== Center =====
+[module/spotify]
+type = custom/script
+
+exec = python ~/.config/polybar/scripts/spotify.py  -f '{artist}: {song}' --font=1 -t 80
+interval = 1
+
+format-prefix = " " 
+format = <label>%{F#495358}  |  %{F-}
+format-foreground = ${color.purple}
+
 
 [module/date]
 type = internal/date
+
 interval = 5
-label-foreground = ${colors.white}
-time     = %I:%M %p
-time-alt =" %d %B %Y "
-label    = %time%
+date = " %A, %d %B %Y "
+time = %H:%M
 
-[module/time]
-type = internal/date
-interval = 5
-label-foreground = ${colors.white}
-time = " %A, %d %B %Y "
-time-alt     = %H:%M 
-label    = %time%
+format = <label>
+format-padding = 1
+format-foreground = ${color.purple}
 
-[module/blt]
-type = custom/script
-exec = ~/.config/polybar/sblt
-format-foreground     = ${colors.blue}
-click-left = opdrofi
-interval = 1
+label = %date%%time%
 
 
-[module/pulseaudio]
-type = internal/pulseaudio
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
-use-ui-max = false
-interval = 5
-format-volume            = <ramp-volume><label-volume>
-format-volume-foreground = ${colors.green}
-;label-volume             = %percentage%%
-label-volume = %{F#a6e3a1} %{F#a6e3a1}%percentage:3%%
-label-volume-padding     = 1
-
-format-muted-foreground     = ${colors.red}
-format-muted-prefix         = ﱝ
-format-muted-prefix-padding = 1
-;label-muted                 = Muted
-label-muted =%{F#928374} %{F-}mute
-label-muted-padding         = ${self.label-volume-padding}
-
-ramp-volume-0 = 奄
-ramp-volume-1 = 奄
-ramp-volume-2 = 奔
-ramp-volume-3 = 奔
-ramp-volume-4 = 墳
-ramp-volume-5 = 墳
-ramp-volume-6 = 墳
-ramp-volume-padding = 1
-
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-format-mounted-prefix         = 
-format-mounted-prefix-padding = 1
-label-mounted                 = %free%
-label-mounted-padding         = 1
-
-format-unmounted-prefix       =
-label-unmounted               = %mountpoint%: not mounted
-label-unmounted-padding       = ${self.label-mounted-padding}
-
-
-[module/xkeyboard]
-type = internal/xkeyboard
-
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-format-prefix         = 
-format-prefix-padding = 1
-label-layout          = %layout%
-label-layout-padding  = 1
-
-label-indicator-foreground = ${colors.alert}
-label-indicator-padding    = 1
-
-[module/disk]
-type = custom/script
-exec = ~/.config/polybar/diskusage
-format-foreground     = ${colors.cyan}
-interval = 5
-click-left = alacritty -e gdu
-
-[module/memory]
-
-type = custom/script
-exec = ~/.config/polybar/memory
-format-foreground     = ${colors.magenta}
-interval = 1
-click-left = alacritty -e htop
-
-
+; ===== Right =====
 [module/network]
 type = internal/network
+
 interface = wlp4s0
-interval = 3.0
+interval = 5.0
+accumulate-stats = true
+unknown-as-up = true
 
-;format-connected-padding = 2
-;format-disconnected-padding = 2
-format-connected-underline = ${colors.white}
-format-disconnected-underline = ${colors.white}
+format-connected = <ramp-signal>
+format-connected-padding = 1
+format-connected-foreground = ${color.purple}
 
-; Available tags:
-;   <label-connected> (default)
-;   <ramp-signal>
-format-connected = %{F#cdd6f4}  <label-connected> 
-
-; Available tags:
-;   <label-disconnected> (default)
-format-disconnected = <label-disconnected>
-
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
-format-packetloss = <animation-packetloss> <label-connected>
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: %ifname% %local_ip%
+ramp-signal-0 = 
 label-connected = %essid%
 
-; Available tokens:
-;   %ifname%    [wireless+wired]
-; Default: (none)
-label-disconnected = %{F#928374} %{F-}none
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %linkspeed% [wired]
-; Default: (none)
-;label-packetloss = %essid%
-;label-packetloss-foreground = #eefafafa
-
-; Only applies if <animation-packetloss> is used
-animation-packetloss-0 = ⚠
-animation-packetloss-1 = 📶
-; Framerate in milliseconds
-animation-packetloss-framerate = 500
-
+format-disconnected = Not connected
+format-disconnected-padding = 1
+format-disconnected-foreground = ${color.purple}
 
 
 [module/battery0]
@@ -213,26 +148,27 @@ adapter = AC
 ;-- Most batteries never hit 100%
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
+format-charging = <animation-charging>
+format-discharging = <ramp-capacity>
+format-full = <ramp-capacity>
+format-padding = 1
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
 
-ramp-capacity-0 =  
-ramp-capacity-0-foreground = ${colors.red}
-ramp-capacity-1 =  
-ramp-capacity-2 =  
-ramp-capacity-3 =  
-ramp-capacity-4 =  
+ramp-capacity-0 = 󰂃
+ramp-capacity-0-foreground = #C90E14
+ramp-capacity-1 = 󰁼
+ramp-capacity-2 = 󰁾
+ramp-capacity-3 = 󰂀
+ramp-capacity-4 = 󰁹
 ramp-capacity-foreground = ${colors.green}
 
-animation-charging-0 =  
-animation-charging-1 =  
-animation-charging-2 =  
-animation-charging-3 =  
-animation-charging-4 =  
+animation-charging-0 = 󰂎
+animation-charging-1 = 󰁼
+animation-charging-2 = 󰁾
+animation-charging-3 = 󰂀
+animation-charging-4 = 󰁹
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
@@ -246,79 +182,51 @@ adapter = AC
 ;-- Most batteries never hit 100%
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
+format-charging = <animation-charging>
+format-padding = 1
+format-discharging = <ramp-capacity>
+format-full = <ramp-capacity>
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
 
-ramp-capacity-0 =  
-ramp-capacity-0-foreground = ${colors.red}
-ramp-capacity-1 =  
-ramp-capacity-2 =  
-ramp-capacity-3 =  
-ramp-capacity-4 =  
+ramp-capacity-0 = 󰂃
+ramp-capacity-0-foreground = #C90E14
+ramp-capacity-1 = 󰁼
+ramp-capacity-2 = 󰁾
+ramp-capacity-3 = 󰂀
+ramp-capacity-4 = 󰁹
 ramp-capacity-foreground = ${colors.green}
 
-animation-charging-0 =  
-animation-charging-1 =  
-animation-charging-2 =  
-animation-charging-3 =  
-animation-charging-4 =  
+
+animation-charging-0 = 󰂎
+animation-charging-1 = 󰁼
+animation-charging-2 = 󰁾
+animation-charging-3 = 󰂀
+animation-charging-4 = 󰁹
+
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 
+[module/pulseaudio]
+type = internal/pulseaudio
 
-;;-------------------
+sink = alsa_output.pci-0000_12-00.3.analog-stereo
+use-ui-max = true
+interval = 5
 
-[module/brightness]
-;type = internal/xbacklight
-type = internal/backlight
+format-volume = <ramp-volume> <label-volume>
+format-volume-padding = 1
+format-volume-foreground = ${color.purple}
 
-; Use the following command to list available cards:
-; $ ls -1 /sys/class/backlight/
-card = intel_backlight
-;card = amdgpu_bl0
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-headphones-0 = 
 
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-format = <label>
-format-background = ${colors.bg}
-format-foreground = ${colors.blue}
-format-padding = 1
+label-muted =  Muted
+label-muted-foreground = ${color.purple}
 
-; Available tokens:
-;   %percentage% (default)
-label = %percentage%%
-
-; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-; Only applies if <bar> is used
-bar-format = ${bar.format}
-bar-width = ${bar.width}
-bar-gradient = false
-
-bar-indicator = ${bar.indicator}
-bar-indicator-foreground = ${colors.fg}
-
-bar-fill = ${bar.fill}
-bar-foreground-0 = ${colors.green}
-bar-foreground-1 = ${colors.green}
-bar-foreground-2 = ${colors.yellow}
-bar-foreground-3 = ${colors.yellow}
-bar-foreground-4 = ${colors.red}
-
-bar-empty = ${bar.empty}
-bar-empty-foreground = ${color.foreground-alt}
 
 
 [module/backlight]
@@ -326,19 +234,32 @@ type = internal/backlight
 
 card = intel_backlight
 
-format = <ramp> <label>
+format = <ramp>
 format-background = ${colors.bg}
 format-foreground = ${colors.yellow}
 format-padding = 1
 
 label = %percentage%%
 
-ramp-0 = 󰃜
-ramp-1 = 󰃛
-ramp-2 = 󰃚
+ramp-0 = 󰃞
+ramp-1 = 󰃟
+ramp-2 = 󰃝
+ramp-3 = 󰃠
 
 
 [module/tray] 
 type = internal/tray 
 format-margin = 8px 
 tray-spacing = 8px
+
+
+[module/xkeyboard]
+type = internal/xkeyboard
+
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+format-prefix         = 
+format-prefix-padding = 1
+label-layout          = %layout%
+label-layout-padding  = 1
+label-indicator-on-capslock = 
